 * Fixed Capture the Flag error: Flag of first team spawned at second hog instead of first
 * Mutant script shows now appropriate ranking and graph in stats screen
 * Disable Sudden Death for good in Shoppa game scheme, some game styles and mission maps

Missions and Campaigns:
 + New scenario: Teamwork 2
 + New training: Basic Flying Saucer Training
 + Rope-Knocking Challenge was improved (now awards score based on kills and time; taunts for knocking out hedgehogs)
 + A few campaign missions now save your personal best successes (e.g. fastest finish in Hard Flying) which get shown after you finish them agin
 + A Space Adventure shows 2 flowers over fully completed planets (with side missions)
 + Rewrote some help texts in basic rope training
 + Graphical effect (black bars) while in cut scenes
 * Fix weird behaviour when walking right before the first animation in A Space Adventure missions
 * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
 * Fixed Target Practice missions getting stuck when a target dropped into water
 * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
 * Fixed Lua error message in A Classic Fairytale mission 8
 * Fixed Lua error messages and broken stats screen in Climb Home singleplayer mission
 * Fixed Killing the Specialists giving you another free turn after killing Desert Eagle with a desert eagle with shot #1-3

Frontend:
 + Campaign screen shows which campaigns and missions you've completed so far
 + Training screen now has 3 mission categories: Training (tutorials), Challenge (get a high score), Scenario (complete a task)
 + Replaced the Fort Mode game modifier by adding "Forts" to the map type selection. This makes the mode easier selectable/discoverable. Also the slider can be used to adjust the distance between forts.
 + Menu screens got few new icons and other tweaks, e.g. larger dropdown lists for easier access