@@ -69,6 +69,7 @@ EXTENDED CREDITS LIST
 = MISSIONS
 ==========
 - Arkhnen -> Teamwork 2 (2012)
+- Wuzzy -> Big Armory (2016)
 
 ==========
 = SOUNDS
